Smaller screen support; require minor design & size changes

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -19,7 +19,7 @@ html {
 
 .btn {
   border-radius: 50px;
-  padding: 10px 25px;
+  padding: 12px 28px;
   font-size: 0.75em;
   color: var(--main-color);
 }
@@ -30,8 +30,8 @@ html {
 }
 
 .btn-bigger {
-  padding: 15px 40px;
-  font-size: 0.8em;
+  padding: 20px 70px;
+  font-size: 0.9em;
 }
 /*--------------------------*/
 
@@ -46,8 +46,9 @@ html {
 }
 
 img#logo {
-  width: 320px;
+  width: 100%;
   height: auto;
+  max-width: 320px;
 }
 
 #nav-links {
@@ -73,21 +74,21 @@ img#logo {
 /* Home screen displayed occupying the full viewport*/
 .full-viewport {
   width: 100%;
-  height: 100vh;
-  min-height: 800px;
+  height: 90vh;
+  min-height: 700px;
   max-height: 1000px;
 }
 
-#first-section h1{
-  font-size: 2.5em;
+#first-section h1 {
+  font-size: 3em;
   color: var(--main-color);
   font-weight: bold;
-  padding-right: 25%;
+  padding-right: 10%;
   margin-top: 120px;
   margin-bottom: 65px;
 }
 
-#first-section a{
+#first-section a {
   color: var(--main-color);
   padding-bottom: 3px;
   border-bottom: 1px solid var(--main-color);
@@ -98,7 +99,7 @@ img#logo {
 /*Second section*/
 #second-section {
   background-color: var(--main-color);
-  padding: 70px;
+  padding: 70px 0;
 }
 
 #second-section h2{
@@ -144,6 +145,9 @@ img#logo {
 /*---------------------------------------*/
 
 /* Third section: Portfolio */
+#third-section {
+  margin-bottom: 80px
+}
 
 #port-section {
   padding-top: 80px;
@@ -176,8 +180,9 @@ img#logo {
 }
 
 .hpd-img-div img{
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  max-width: 370px;
+  height: auto;
 }
 
 /* (Heading, para) & button div */ 
@@ -188,6 +193,7 @@ img#logo {
   justify-content: space-between;
   align-items: flex-start;
   width: 500px;
+  margin-right: 30px;
 }
 
 .heading-p-div h3 {
@@ -210,6 +216,11 @@ img#logo {
 /* Alternate image & texts-button */
 .alter-img-hpd {
   flex-direction: row-reverse;
+}
+
+.alt-heading-p-div {
+  margin-left: 30px;
+  margin-right: 0;
 }
 
 /*-----------------------------*/
@@ -256,6 +267,7 @@ img#logo {
   width: -webkit-min-content;
   width: -moz-min-content;
   width: min-content;
+  padding: 0 20px;
 }
 
 /* Div for image */
@@ -263,32 +275,40 @@ img#logo {
   margin-bottom: 20px;
 }
 
-/* Text datas */
+.about-image img {
+  display: inline-block;
+}
+
+/* Text data */
 /* Div for text */
 .about-text p {
   color: var(--main-bg-color);
 }
 
-.cmp-title {
-  font-size: 1em;
+p.cmp-title {
+  font-size: 1.1em;
   padding-bottom: 5px;
   font-weight: bold;
 }
 
-.name {
+p.name {
   font-size: 1.7em;
   font-weight: 600;
   padding-bottom: 5px;
 }
 
-.job {
+p.job {
   font-size: 1.4em;
   padding-bottom: 10px;
 }
 
+p.description {
+  font-size: 1.1em;
+}
+
 /* Second person in about us */
 #sec-person {
-  margin-top: 100px;
+  margin-top: 130px;
 }
 /*-------------------*/
 
@@ -305,15 +325,18 @@ img#logo {
 
 /* Btn resizing */
 .btn-biggest {
-  padding: 25px 60px;
+  padding: 30px 60px;
   font-size: 1em;
 }
-
 
 /* Button & text */
 .btn-p-container {
   width: 350px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Text below btn */
@@ -335,7 +358,7 @@ img#logo {
   text-align: center;
   background-color: var(--main-color);
   padding: 60px;
-  color: var(--main-bg-color)
+  color: rgb(158, 153, 202);
 }
 
 /* Interactive (hover, click) elements */
@@ -345,4 +368,191 @@ img#logo {
 
 /* Layout for smaller screen */
 
+@media (max-width: 1300px) {
+  .container {
+    width: 75%;
+  }
+
+  #first-section h1 {
+    font-size: 2.5em;
+    padding-right: 5%;
+  }
+  
+  .hpd-img-div img{
+    max-width: 300px;
+  }
+
+  .heading-p-div {
+    width: 400px;
+    margin-right: 20px;
+  }
+  
+  .alt-heading-p-div {
+    margin-left: 20px;
+    margin-right: 0;
+  }
+
+  .img-txt-about {
+    width: 280px;
+  }
+
+  .about-image img {
+    width: 280px;
+  }
+}
+
+@media (max-width: 980px) {
+  .container {
+    width: 85%;
+  }
+
+  .hpd-img-div img{
+    max-width: 250px;
+  }
+
+  .heading-p-div {
+    width: 380px;
+    margin-right: 20px;
+  }
+  
+  .alt-heading-p-div {
+    margin-left: 20px;
+    margin-right: 0;
+  }
+
+  .img-txt-about {
+    width: 250px;
+  }
+
+  .about-image img {
+    width: 250px;
+  }
+
+  #second-section h2{
+    padding-right: 25%;
+  }
+  
+  #second-section p {
+    padding-left: 19%;
+  }
+
+  .btn-bigger {
+    padding: 12px 35px;
+    font-size: 0.8em;
+  }
+
+}
+
+@media (max-width: 800px) {
+  .container {
+    width: 90%;
+  }
+}
+
+/* todo: decrease text size; dec margins
+         flex column; fix alignment */
+@media (max-width: 750px) {
+  .hpd-img-div img{
+    max-width: 380px;
+  }
+
+  .hpd-img-div {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .heading-p-div {
+    width: 380px;
+    margin: 15px 0;
+    align-items: flex-end;
+  }
+  
+  .img-txt-about {
+    width: 240px;
+  }
+
+  .about-image img {
+    width: 240px;
+  }
+
+  #second-section h2{
+    padding-right: 15%;
+  }
+  
+  #second-section p {
+    padding-left: 15%;
+  }
+
+  .btn-biggest {
+    padding: 20px 50px;
+  }
+
+}
+
+@media (max-width: 680px) {
+  #two-plp {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+  }
+
+  #fir-person {
+    align-self: flex-start;
+  }
+
+  #sec-person {
+    align-self: flex-end;
+    margin-top: 50px;
+  }
+  
+  #sec-person .name, #sec-person .job{
+    text-align: right;
+  }
+
+  .img-txt-about {
+    width: 250px;
+  }
+
+  .about-image img {
+    width: 250px;
+  }
+
+  #second-section h2{
+    padding-right: 10%;
+  }
+  
+  #second-section p {
+    padding-left: 10%;
+  }
+
+  #sec-btn-div {
+    flex-direction: column-reverse;
+    align-items: flex-end;
+  }
+
+}
+
+@media (max-width: 500px) {
+  .img-txt-about {
+    width: 220px;
+  }
+
+  .about-image img {
+    width: 220px;
+  }
+
+  .hpd-img-div img{
+    max-width: 280px;
+  }
+
+  .heading-p-div {
+    width: 280px;
+  }
+
+  .about-text {
+    font-size: 12px;
+  }
+  
+}
 /*-----------------------*/
