--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -15,12 +15,14 @@ html {
   width: 70%;
   margin: 0 auto;
   max-width: 1000px;
+  font-size: 16px; 
+  word-wrap: break-word;
 }
 
 .btn {
   border-radius: 50px;
   padding: 12px 28px;
-  font-size: 0.75em;
+  font-size: 0.9em;
   color: var(--main-color);
 }
 
@@ -31,7 +33,7 @@ html {
 
 .btn-bigger {
   padding: 20px 70px;
-  font-size: 0.9em;
+  font-size: 1.1em;
 }
 /*--------------------------*/
 
@@ -42,7 +44,6 @@ html {
   justify-content: space-between;
   align-items: center;
   margin: 30px 0;
-  flex-wrap: wrap;
 }
 
 img#logo {
@@ -51,38 +52,55 @@ img#logo {
   max-width: 320px;
 }
 
-#nav-links {
+.nav-links {
   display: flex;
   justify-content: flex-end; 
   margin-left: 20px;
 }
 
-#nav-links a {
+.nav-links a {
   margin: 0 30px;
   padding: 10px;
   display: block;
   color: var(--main-color);
-  font-weight: 600;
+  font-weight: 700;
+  font-size: 18px;
 }
 /*--------------------------*/
 
+
+/* Burger Navbar*/
+.burger {
+  display: none;
+  margin-left: 40px;
+}
+
+.burger div {
+  width: 18px;
+  height: 3px;
+  border-radius: 25%;
+  background-color: var(--main-color);
+  margin: 2px;
+  transition: all 0.3s ease;
+}
+/*------------------------*/
 /* First section of webpage */
 #first-section {
-  margin-bottom: 40px;
+  margin-bottom: 85px;
 }
 
 /* Home screen displayed occupying the full viewport*/
 .full-viewport {
   width: 100%;
   height: 90vh;
-  min-height: 700px;
-  max-height: 1000px;
+  min-height: 650px;
+  max-height: 700px;
 }
 
 #first-section h1 {
-  font-size: 3em;
+  font-size: 4em;
   color: var(--main-color);
-  font-weight: bold;
+  font-weight: 700;
   padding-right: 10%;
   margin-top: 120px;
   margin-bottom: 65px;
@@ -93,6 +111,8 @@ img#logo {
   padding-bottom: 3px;
   border-bottom: 1px solid var(--main-color);
   margin-bottom: 40px;
+  font-size: 1.5em;
+  font-weight: 500;
 }
 /*-------------------------------------------*/
 
@@ -104,16 +124,17 @@ img#logo {
 
 #second-section h2{
   color: var(--main-bg-color);
-  font-size: 2.5em;
-  font-weight: bold;
-  padding-right: 30%;
+  font-size: 3em;
+  font-weight: 650;
+  padding-right: 20%;
   margin-bottom: 40px;
 }
 
 #second-section p {
   color: var(--main-bg-color);
-  padding-left: 35%;
+  padding-left: 20%;
   margin-bottom: 35px;
+  font-size: 1.5em;
 }
 /* Two button flexbox */
 #sec-btn-div {
@@ -134,14 +155,6 @@ img#logo {
   margin-right: 0;
 }
 
-.dot {
-  height: 0.18em;
-  width: 0.18em;
-  margin: 0 2px;
-  background-color: var(--main-bg-color);
-  border-radius: 50%;
-  display: inline-block;
-}
 /*---------------------------------------*/
 
 /* Third section: Portfolio */
@@ -150,22 +163,22 @@ img#logo {
 }
 
 #port-section {
-  padding-top: 80px;
+  padding-top: 10px;
 }
 
 /* Heading */
 #portfolio-h2 {
-  font-size: 2.3em;
+  font-size: 2.25em;
   font-weight: 700;
   color: var(--main-color);
   text-align: center;
-  padding: 10px;
-  margin: 10px 0;
+  padding: 20px 0;
+  margin: 30px 0;
 }
 /* Each seperate portfolio class */
 .port-container {
   padding: 40px 0;
-  margin: 20px 0;
+  margin: 10px 0;
 }
 /* (Heading para, button) & image div */
 .hpd-img-div {
@@ -182,7 +195,8 @@ img#logo {
 .hpd-img-div img{
   width: 100%;
   max-width: 370px;
-  height: auto;
+  height: 380px;
+  object-fit: cover;
 }
 
 /* (Heading, para) & button div */ 
@@ -197,9 +211,9 @@ img#logo {
 }
 
 .heading-p-div h3 {
-  font-size: 1.8em;
+  font-size: 2.25em;
   color: var(--main-color);
-  font-weight: 600;
+  font-weight: 650;
   margin-bottom: 10px;
 }
 
@@ -208,7 +222,8 @@ img#logo {
 }
 
 .heading-p-div p {
-  font-size: 0.9em;
+  font-size: 1.1em;
+  font-weight: 400;
   color: var(--main-color);
   margin-bottom: 15px;
 }
@@ -230,7 +245,7 @@ img#logo {
 #fourth-section {
   padding: 20px 0;
   background-color: var(--main-color);
-  padding-bottom: 300px;
+  padding-bottom: 200px;
 }
 
 /* The whole container */
@@ -241,7 +256,7 @@ img#logo {
 /* Heading: About us */
 #about-us {
   color: var(--main-bg-color);
-  font-size: 2em;
+  font-size: 2.25em;
   font-weight: 700;
   padding: 20px;
   margin: 20px 20px 60px 20px;
@@ -253,7 +268,7 @@ img#logo {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 10px;
+  padding: 10px 0;
 }
 
 /* Seperate section for each */
@@ -267,7 +282,6 @@ img#logo {
   width: -webkit-min-content;
   width: -moz-min-content;
   width: min-content;
-  padding: 0 20px;
 }
 
 /* Div for image */
@@ -277,6 +291,9 @@ img#logo {
 
 .about-image img {
   display: inline-block;
+  width: 300px;
+  height: 335px;
+  object-fit: cover;
 }
 
 /* Text data */
@@ -286,24 +303,26 @@ img#logo {
 }
 
 p.cmp-title {
-  font-size: 1.1em;
+  font-size: 1.4em;
   padding-bottom: 5px;
-  font-weight: bold;
+  font-weight: 650;
 }
 
 p.name {
-  font-size: 1.7em;
-  font-weight: 600;
+  font-size: 1.8em;
+  font-weight: 800;
   padding-bottom: 5px;
 }
 
 p.job {
-  font-size: 1.4em;
+  font-size: 1.5em;
   padding-bottom: 10px;
+  font-weight: 500;
 }
 
 p.description {
   font-size: 1.1em;
+  font-weight: 500;
 }
 
 /* Second person in about us */
@@ -316,39 +335,38 @@ p.description {
 
 #contact h2 {
   color: var(--main-bg-color);
-  font-size: 2em;
+  font-size: 2.25em;
   font-weight: 700;
   text-align: center;
   padding: 10px;
-  margin: 60px;
+  margin: 60px 0;
+  letter-spacing: 2px;
 }
 
 /* Btn resizing */
 .btn-biggest {
   padding: 30px 60px;
-  font-size: 1em;
+  font-size: 1.4em;
 }
 
 /* Button & text */
-.btn-p-container {
-  width: 350px;
+.end-btn-container {
   margin: 0 auto;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
 /* Text below btn */
-#btn-endnote {
-  width: 85%;
-  margin: 10px auto;
+#endnote {
+  width: 60%;
+  margin: 20px auto;
   text-align: center;
 }
 
 #contact p {
   color: var(--main-bg-color);
-  font-size: 1em;
+  font-size: 1.3em;
+  font-weight: 500;
   padding: 20px 0;
 }
 /*--------------------*/
@@ -357,8 +375,9 @@ p.description {
 #copyright {
   text-align: center;
   background-color: var(--main-color);
-  padding: 60px;
-  color: rgb(158, 153, 202);
+  padding: 30px;
+  color: #FFFFFF;
+  font-size: 12px;
 }
 
 /* Interactive (hover, click) elements */
@@ -371,15 +390,24 @@ p.description {
 @media (max-width: 1300px) {
   .container {
     width: 75%;
+    font-size: 15px;
   }
 
   #first-section h1 {
-    font-size: 2.5em;
     padding-right: 5%;
   }
   
+  #second-section p {
+    padding-left: 15%;
+  }
+
+  #second-section h2 {
+    padding-right: 15%;
+  }
+
   .hpd-img-div img{
     max-width: 300px;
+    height: 310px;
   }
 
   .heading-p-div {
@@ -398,20 +426,34 @@ p.description {
 
   .about-image img {
     width: 280px;
+    height: 315px;
   }
 }
 
 @media (max-width: 980px) {
+  body, .body-wrapper {
+    overflow-x: hidden;
+  }
+
+
+  .full-viewport {
+    height: auto;
+    min-height: auto;
+    max-height: auto;
+  }
+
   .container {
     width: 85%;
+    font-size: 14px;
   }
 
   .hpd-img-div img{
     max-width: 250px;
+    height: 260px;
   }
 
   .heading-p-div {
-    width: 380px;
+    width: 400px;
     margin-right: 20px;
   }
   
@@ -426,34 +468,107 @@ p.description {
 
   .about-image img {
     width: 250px;
+    height: 280px;
   }
 
   #second-section h2{
     padding-right: 25%;
   }
-  
-  #second-section p {
-    padding-left: 19%;
-  }
 
   .btn-bigger {
     padding: 12px 35px;
-    font-size: 0.8em;
   }
 
+  /* Burger Navbar */
+  .nav-links {
+    position: absolute;
+    right: 0px;
+    left: 0px;
+    height: 180px;
+    top: 100px;
+    padding: 0;
+    margin: 0;
+    background-color: var(--main-bg-color);
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+    border-left: 2px solid var(--main-color);
+  }
+
+  .burger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .nav-links a {
+    opacity: 0;
+    padding: 20px 30px;
+  }
+}
+.nav-active {
+  transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-4px, 3px);
+}
+.toggle .line2 {
+  opacity: 0;
+}
+.toggle .line3 {
+  transform: rotate(45deg) translate(-4px, -3px);
 }
 
 @media (max-width: 800px) {
   .container {
     width: 90%;
   }
+
+  #first-section, #second-section .container {
+    font-size: 12px;
+  }
 }
 
 /* todo: decrease text size; dec margins
          flex column; fix alignment */
-@media (max-width: 750px) {
+@media (max-width: 780px) {
+
+  .port-container {
+    padding: 10px 0;
+    margin: 10px 0;
+  }
+
+  #second-section {
+    padding: 50px 0;
+  }
+
+  #about-us {
+    margin: 15px 0;
+  }
+
   .hpd-img-div img{
     max-width: 380px;
+    height: 390px;
+  }
+
+  #first-section, #second-section .container {
+    font-size: 11px;
+  }
+  #contact {
+    font-size: 12px;
   }
 
   .hpd-img-div {
@@ -488,6 +603,14 @@ p.description {
     padding: 20px 50px;
   }
 
+  img#logo {
+    width: 60%;
+  }
+
+  #endnote {
+    width: 70%;
+  }
+
 }
 
 @media (max-width: 680px) {
@@ -506,16 +629,26 @@ p.description {
     margin-top: 50px;
   }
   
+  .img-txt-about {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
   #sec-person .name, #sec-person .job{
     text-align: right;
   }
 
-  .img-txt-about {
+  .about-image img {
     width: 250px;
   }
 
-  .about-image img {
-    width: 250px;
+  #fir-person .about-image {
+    align-self: flex-start;
+  }
+
+  #sec-person .about-image {
+    align-self: flex-end;
   }
 
   #second-section h2{
@@ -531,28 +664,89 @@ p.description {
     align-items: flex-end;
   }
 
+  #contact {
+    font-size: 11px;
+  }
+
+  .container {
+    font-size: 12px;
+  }
+
 }
 
 @media (max-width: 500px) {
-  .img-txt-about {
-    width: 220px;
+
+  #first-section, #second-section .container {
+    font-size: 8px;
+  }
+  
+  img#logo{
+    width: 50%;
+    min-width: 150px;
+  }
+
+  #second-section {
+    padding: 40px 0;
+  }
+
+  .nav-links {
+    top: 80px;
+  }
+
+  #first-section h1 {
+    margin-top: 65px;
+  }
+
+  .container {
+    font-size: 11px;
+  }
+
+  #port-section {
+    padding-top: 0px;
+  }
+
+  .port-container {
+    padding: 10px 0;
+    margin: 10px 0;
+  }
+
+  #contact {
+    font-size: 9px;
+  }
+
+  #contact h2 {
+    margin: 20px 0;
+  }
+
+  #endnote {
+    margin: 0 auto;
+    width: 80%;
+  }
+
+  #about-us {
+    margin: 15px;
+  }
+
+  #about-container {
+    margin-bottom: 100px;
+  }
+
+  div#fourth-section {
+    padding-bottom: 90px;
   }
 
   .about-image img {
     width: 220px;
+    height: 250px;
   }
 
   .hpd-img-div img{
     max-width: 280px;
+    height: 290px;
   }
 
   .heading-p-div {
     width: 280px;
   }
-
-  .about-text {
-    font-size: 12px;
-  }
-  
 }
 /*-----------------------*/
